// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Modal test suite Should hide Error Modal 1`] = `
<div
  class="sc-bdVaJa jxEdDa"
>
  <div
    class="sc-bwzfXH huiBmN"
  >
    <div
      class="sc-htpNat dvDDSA"
    >
      <h1
        class="sc-bxivhb gqFfed"
      >
        Oops!
      </h1>
      <p
        class="sc-ifAKCX cyqsyD"
      />
      <button
        class="sc-EHOje gNwhWQ"
      >
        Okay
      </button>
    </div>
  </div>
</div>
`;

exports[`Error Modal test suite Should render Error Modal correctly 1`] = `
<div
  class="sc-bdVaJa ezOVdl"
>
  <div
    class="sc-bwzfXH huiBmN"
  >
    <div
      class="sc-htpNat dvDDSA"
    >
      <h1
        class="sc-bxivhb gqFfed"
      >
        Oops!
      </h1>
      <p
        class="sc-ifAKCX cyqsyD"
      >
        Error modal text
      </p>
      <button
        class="sc-EHOje gNwhWQ"
      >
        Okay
      </button>
    </div>
  </div>
</div>
`;
